refactor dtos